--- a/src/app/feature/principal/principal.component.html
+++ b/src/app/feature/principal/principal.component.html
@@ -1,9 +1,6 @@
-<router-outlet>
-    <barra-de-navegacao></barra-de-navegacao>
-    <div *ngIf="isRootRoute">
-        <div class="container pt-3">
-            <p class="text-primary">Teste Técnico - Princeton Lemitar</p>
-        </div>
+<barra-de-navegacao></barra-de-navegacao>
+<div>
+    <div class="container pt-3">
+        <p class="text-primary">Teste Técnico - Princeton Lemitar</p>
     </div>
-</router-outlet>
-
+</div>
