excluir banco e remove console.log

--- a/src/app/feature/listagem-de-registros/listagem-de-registros.component.html
+++ b/src/app/feature/listagem-de-registros/listagem-de-registros.component.html
@@ -18,6 +18,7 @@
     (changeQtdItensNav)="changeQtdItensNav($event)"
     (clickBuscar)="tableFilter($event)"
     (clickBtnLimparFiltro)="limparFiltro($event)"
+    (clickBtnDelete)="delete($event)"
     >        
     </responsive-table>
 
